--- a/resources/js/floor-planning-app/pages/Planner.module.scss
+++ b/resources/js/floor-planning-app/pages/Planner.module.scss
@@ -6,7 +6,8 @@
     height: 100%;
 
     .leftbar {
-        background-color: #d8e8f5;
+        align-items: center;
+        background-color: $color-secondary-bg;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
